tests/test_assets/semantic/invalid/control_flow/non_void_loop_can_exit.expected
semantic error at line 1: non-void function may not return a value
semantic error at line 11: non-void function may not return a value
2 semantic errors generated.
